syntax = "proto3";

package order;

import "google/protobuf/timestamp.proto";

option go_package = "internal/proto";

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
  rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse);
  rpc UpdateOrderStatus(UpdateOrderStatusRequest) returns (UpdateOrderStatusResponse);
  rpc DeleteOrder(DeleteOrderRequest) returns (DeleteOrderResponse);
}

message Order {
  string id = 1;
  string user_id = 2;
  repeated string product_ids = 3;
  double total_price = 4;
  string status = 5;
  google.protobuf.Timestamp created_at = 6;
}

message CreateOrderRequest {
  string user_id = 1;
  repeated string product_ids = 2;
  int32 total = 3;
}

message CreateOrderResponse {
  Order order = 1;
}

message GetOrderRequest { string order_id = 1; }
message GetOrderResponse { Order order = 1; }

message ListOrdersRequest { 
  string user_id = 1;   
  int32 offset = 2;
  int32 limit = 3;
}
message ListOrdersResponse { repeated Order orders = 1; }

message UpdateOrderStatusRequest {
  string order_id = 1;
  string status = 2;
}
message UpdateOrderStatusResponse { bool success = 1; }

message DeleteOrderRequest { string order_id = 1; }
message DeleteOrderResponse { bool success = 1; }
